# Teddy-Code

./: .env.example  .gitignore  .pico.toml.example  README.md  install.sh  pyproject.toml
benchmarks/: coding_tasks.json
docs/: configuration.md  memory.md  sandbox.md  skills.md
docs/architecture/: pico-runtime-evidence-plane.md  pico-tool-policy-layer.md
pico/: cli.py
pico/config/: __init__.py
pico/core/: context_manager.py  engine.py  plan_mode.py  runtime.py  task_state.py  tool_executor.py  tool_policy.py
pico/evaluation/: evaluator.py  metrics.py
pico/features/: skills.py
pico/tools/: registry.py  schemas.py
pico/tui/: app.py  widgets.py
release/v3/: CHANGELOG.md  README.md  REVIEW.md  TESTING.md
scripts/: bench-teddycode-v3.sh  collect_resume_metrics.py  run_business_scenario_dogfood.py  run_context_cost_experiment.py  run_large_scale_experiments.py  run_llm_handoff_benchmark.py  run_provider_experiments.py  run_real_session_acceptance.py  run_v3_human_scenario_gate.py  validate_llm_handoff.py
teddycode/: __init__.py  cli.py  testing.py
teddycode/commands/: slash.py
tests/: test_agent_workers_acceptance.py  test_architecture_boundaries.py  test_ask_user.py  test_benchmark_integrations.py  test_business_scenario_dogfood.py  test_compact.py  test_compact_cli.py  test_context_budget_summary.py  test_context_cost.py  test_context_cost_experiment.py  test_context_governance_acceptance.py  test_context_handoff.py  test_context_manager.py  test_context_orchestrator.py  test_context_orchestrator_acceptance.py  test_context_pressure.py  test_context_replacements.py  test_context_report.py  test_context_retention.py  test_context_sections.py  test_engine_acceptance.py  test_engine_transitions.py  test_evaluator.py  test_final_readiness.py  test_final_readiness_acceptance.py  test_llm_handoff_benchmark.py  test_memory.py  test_memory_agent_eval.py  test_memory_lint.py  test_metrics.py  test_multimodal.py  test_permissions_acceptance.py  test_pico.py  test_provider_errors.py  test_release_smoke.py  test_run_evidence.py  test_run_store.py  test_runtime.py  test_runtime_evidence_acceptance.py  test_safety_invariants.py  (+14 more)
(+121 files in other folders)
