[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "teddycode"
version = "0.3.0"
description = "Small local coding agent for OpenAI-compatible, Anthropic-compatible, and DeepSeek models"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.0.0",
  "textual>=0.86.0",
  "tomli>=2.0.0; python_version < '3.11'",
]

[project.scripts]
teddycode = "teddycode.cli:main"
teddycode-tui = "teddycode.tui.main:main"

[dependency-groups]
dev = [
  "pytest>=8.3.5",
  "pytest-asyncio>=0.23.0",
  "ruff>=0.4.4",
]

[tool.setuptools.packages.find]
include = ["teddycode*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = [
  ".git",
  ".teddycode",
  ".venv",
  ".worktrees",
  "_local",
  "artifacts",
  "build",
  "dist",
  "examples",
  "fixtures",
]
